updated some meta-data in index

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
 
   <title>Basica Calculator</title>
-  <meta name="description" content="Basic Template">
-  <meta name="author" content="Andrew">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="stylesheet" href="styleV2.css">
 
