--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Basica Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <link rel="stylesheet" href="styleV2.css">
+  <link rel="stylesheet" href="./styleV2.css">
 
 </head>
 
